/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "google/protobuf/empty.proto";
import "dolittle/timeseries/datatypes/data_point.proto";

package dolittle.timeseries.datapoints.server;

option csharp_namespace = "Dolittle.TimeSeries.Runtime.DataPoints.Grpc.Server";

// Represents the service for datapoint output stream 
service OutputStream {
    rpc Open(google.protobuf.Empty) returns(stream dolittle.timeseries.datatypes.DataPoint) {}
}